# acture

./: acture.cabal
src/: Actor.hs  Main.hs
