cabal-version: 3.8
name: acture
version: 0.1.0.0

common shared
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    ExistentialQuantification
    FlexibleInstances
    MultiParamTypeClasses
  ghc-options:
    -Weverything
    -Wno-missing-safe-haskell-mode
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures

executable acture
  import: shared
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Actor
  build-depends:
    base
